# Community-IM

./: .gitignore  LICENSE.md  README.md  environment.yml  main.py  pyproject.toml  readme.txt  requirements.txt
.github/workflows/: lint.yml  test.yml
celf++_code_release/: config_test.txt
celf++_code_release/datasets/: graph.inf
celf++_code_release/output/: IC_CelfPlus_Greedy.txt
celf++_code_release_copies/celf++_facebook_community_0_independent_cascade_wc/: InfluenceModels  InfluenceModels.cc  config_test.txt
celf++_code_release_copies/celf++_facebook_community_0_independent_cascade_wc/datasets/: graph.inf
celf++_code_release_copies/celf++_facebook_independent_cascade_wc/: common.h  config_test.txt
cofim_code_release/: CELF  CELF.cpp  CoFIM.cpp  Degree  Degree.cpp  Makefile  ReadMe.txt  SingleDiscount  SingleDiscount.cpp
im_functions/: c_celfpp_nb.py  ccelfpp1_im.py  celfpp_im.py  cofim_im.py  community_detection.py  degdiscount_im.py  degree_im.py  find_n_sim.py  genetic_im.py  heuristic_im.py  independent_cascade.py  influence.py  linear_threshold.py  non_adaptive_im.py  progressive_budgeting.py  true_influence.py  weighted_network.py
im_functions/propagation/: independent_cascade.py  independent_cascade_graphblas.py  linear_threshold.py
im_functions/tests/: test_nb_celfpp.py  test_propagation.py
main_functions/: main_compilation.py  main_evaluation.py  main_offline.py  main_summarization.py
network_data/: bitcoin_network.txt  github_network.txt  n_sim_data.pkl
results/results_independent_cascade_wc/results_facebook/pickle_files/: output_celfpp__100__.pkl
results/results_independent_cascade_wc/results_facebook/runtime_files/: runtime_info_celfpp.txt
results/results_independent_cascade_wc/results_facebook_community_0/pickle_files/: output_celfpp__100__.pkl
results/results_independent_cascade_wc/results_facebook_community_0/runtime_files/: runtime_info_celfpp.txt
